refresh page longer wait

--- a/form-success.html
+++ b/form-success.html
@@ -11,7 +11,7 @@
   <meta rel="author" href="{{ site.data.settings.seo.rel-author }}">
   <meta rel="publisher" href="{{ site.data.settings.seo.rel-publisher }}">
   
-  <META http-equiv="refresh" content="2; URL=/">
+  <META http-equiv="refresh" content="5; URL=/">
   
   <title>{{ site.data.settings.title }}</title>
 
@@ -25,7 +25,7 @@
 
 <h1>Form submitted successfully!</h1>
 
-<p>Please wait while we return you to {{ site.data.settings.title }}</p>
+<p>Please wait while we return you to the <a href="/">{{ site.data.settings.title }}</a> web page.</p>
 
 
 
