--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!DOCTYPE html>
 <html class="">
 <head>
+
   <meta charset="UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +14,7 @@
 
   <title>{{ site.data.settings.title }}</title>
 
-  <link rel="stylesheet" href="assets/css/all.css">
+  <link rel="stylesheet" href="assets/css/all.css?id=1">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   
   {% include analytics.html %}
