--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 {% include footer.html %}
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="assets/js/functions.js"></script>
+<script src="assets/js/functions.js?id=1"></script>
 </body>
 </html>
