improve seo data

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
      "name": "{{ site.data.settings.seo.name }}",
      "jobTitle": "{{ site.data.settings.seo.job }}",
      "description": "{{ site.data.settings.seo.description }}",
+     "memberOf": "{{ site.data.settings.seo.memberof }}",
+     "alumniOf": "{{ site.data.settings.seo.alumniof }}",
      "image": "{{ site.data.settings.seo.image }}",
      "url": "{{ site.data.settings.seo.url }}",
      "sameAs" : [
